# vessel

./: .pre-commit-config.yaml  README.md  pyproject.toml
grav/: README.md  compose.yaml  tasks.py
immich/: README.md  compose.yaml  tasks.py
postgres/: README.md  cron-backup.sh  tasks.py
redis/: compose.yaml
redmine/: Dockerfile  README.md
rss/: README.md  compose.yaml  tasks.py
src/vessel/: discovery.py  main.py  zammad_client.py
wikijs/: README.md
zammad/: README.md  compose.yaml  tasks.py
