[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "vessel"
requires-python = ">=3.11"
version = "0.1.0"
description = "Dynamic Docker Compose CLI for vessel with Click commands built from Invoke tasks"
dependencies = [
  "conjuring",
  "invoke",
  "typer"
]

[project.scripts]
vessel = "vessel.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vessel"]

[tool.ruff]
fix = true
# https://docs.astral.sh/ruff/settings/#line-length
line-length = 120
# https://docs.astral.sh/ruff/settings/#show-fixes
show-fixes = true
# https://docs.astral.sh/ruff/settings/#src
src = ["src"]
# https://docs.astral.sh/ruff/settings/#target-version
target-version = "py311"

[tool.ruff.lint]
# warning: The following rules may cause conflicts when used with the formatter: `COM812`, `D203`.
# To avoid unexpected behavior, we recommend disabling these rules, either by removing them from the
# `select` or `extend-select` configuration or adding them to the `ignore` configuration.
ignore = [
  "COM812",
  "D203",
  "D211", # No blank line before class
  "D213", # multi-line-summary-second-line
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "FIX001",
  "FIX002", # Line contains TO DO, consider resolving the issue
  "PLC0415", # Import should be at top of file (lazy imports for performance)
  "T201", # print statement used
  "TD001",
  "TD002", # Missing author
  "TD003" # Missing issue link on the line following
]
# https://docs.astral.sh/ruff/settings/#select
select = ["ALL"]

# https://docs.astral.sh/ruff/rules/#flake8-quotes-q
[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

# https://docs.astral.sh/ruff/rules/#mccabe-c90
[tool.ruff.lint.mccabe]
# https://docs.astral.sh/ruff/settings/#max-complexity
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Invoke task files: signatures use untyped ctx args (ANN001), broad exception catches are intentional
# (BLE001), long functions are OK for migration scripts (C901, PLR0912, PLR0913, PLR0915),
# and PERF203 (try/except in loop) is acceptable for per-item error isolation.
"zammad/tasks.py" = ["ANN001", "ANN401", "BLE001", "C901", "PERF203", "PLR0912", "PLR0913", "PLR0915", "S603", "S607"]

[tool.uv.sources]
conjuring = {path = "../conjuring", editable = true}
